--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width>, initial-scale=1.0">
-    <title>Clase 06</title>
+    <title>Ford titanium</title>
 
     <script src="https://kit.fontawesome.com/7968cc1663.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/master.css">
